# choreograph

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
choreo/: Cargo.toml
choreo/examples/: thread.rs
choreo/src/: lib.rs
choreo/src/nodes/: action.rs  future.rs  sync.rs
examples/: async.rs  branching.rs  custom.rs  func.rs  join.rs  macro_node.rs  manual_impl.rs  merge.rs  simple.rs  struct.rs  thread.rs  threaded.rs
macros/: Cargo.toml
macros/src/: graph.rs  join.rs  lib.rs  merge.rs  utils.rs
macros/src/graph/: builder.rs  generator.rs  impl.rs  mod.rs  visit.rs
nix/devShells/: build.nix  nightly.nix  stable.nix  vscode.nix
nix/editors/: code.nix  default.nix
src/: graph.rs  lib.rs  macros.rs  node.rs  pool.rs  task.rs
src/graph/: always.rs  branch.rs  cache.rs  entry.rs  graph.rs  join.rs  mod.rs  node.rs  root.rs  tests.rs
src/node/: branch.rs  future.rs  shared.rs  task.rs  then.rs
src/nodes/: action.rs  asyncify.rs  branch.rs  cache.rs  data.rs  depend.rs  dupe.rs  entry.rs  fork.rs  future.rs  join.rs  mod.rs  pipeline.rs  shared.rs  source.rs  split.rs  sync.rs  task.rs  tests.rs  then.rs
src/task/: branch.rs  then.rs
