[package]
name = "choreo"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]

[dependencies]
choreo-macros = { path = "./macros" }
derive-where = "1.2"
futures = "0.3"
indexmap = "2.7"
itertools = "0.14"

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "time", "macros"] }
